--- a/Assignment 3/Assignment 3.vcxproj
+++ b/Assignment 3/Assignment 3.vcxproj
@@ -129,7 +129,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="floyd_bcast.cpp" />
+    <ClCompile Include="floyds.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
