--- a/Assignment 3/Assignment 3.vcxproj.filters
+++ b/Assignment 3/Assignment 3.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="floyd_bcast.cpp">
+    <ClCompile Include="floyds.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
